overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,7 @@ header .introduction p {
 }
 
 .about_text p {
-  font-size: 1.3em;
+  font-size: 1.2em;
   padding: 1px;
   margin: 0px 20px;
   color: #FFFFFF;
@@ -265,6 +265,12 @@ header .introduction p {
 }
 .halfPicture{
   background: url(../wp/train.jpg) no-repeat center center;
+  background-size: cover;
+}
+.extend{
+  height: auto !important;
+}
+.restore {
   background-size: cover;
 }
 .elim {
@@ -281,6 +287,7 @@ header .introduction p {
   font-size: 1em;
   color: #000000;
 }
+
 
 
 
